| Bug #4157 | #2013 - Lost connection to MySQL server during query | ||
|---|---|---|---|
| Submitted: | 16 Jun 2004 1:09 | Modified: | 18 Jun 2004 0:41 |
| Reporter: | Mojenkov Evegny | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S1 (Critical) |
| Version: | 4.0.18 | OS: | FreeBSD (freebsd 5.0/win xp) |
| Assigned to: | Michael Widenius | Target Version: | |
[16 Jun 2004 1:09]
Mojenkov Evegny
[16 Jun 2004 1:10]
Mojenkov Evegny
I find in google that extra parametr in my.cnf like thread_stack=256k can make me happy. But not. :(
[16 Jun 2004 1:29]
Mojenkov Evegny
I get an experiment and delete all keys... my query begin execute ok.. after that i check that trouble in key KEY COLUMN ( owner, columnid, line ).. I delete the third field in this key and query is ok.. I think this a curiosly bug..
[18 Jun 2004 0:41]
Michael Widenius
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Fix will be in 4.0.21 and 4.1.3
The problem was that we missed a case in the range optimizer when a part of a shared sub tree was modified (sorry, not easy to explain).
Thanks for the example; It helped us find the bug quite fast!
Regards,
Monty
